supervisor-macros/tests/ui/compile_fail/resources_duplicate_marker.stderr
error: duplicate `consume` marker
  --> tests/ui/compile_fail/resources_duplicate_marker.rs:11:34
   |
11 |         resources: [LED: consume consume FakeLed];
   |                                  ^^^^^^^
